removed unused imports

--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
 
+    <meta name="description" content="A demo e-commerce application showcasing product listings, cart, and checkout flows." />
+    <meta name="keywords"    content="ecommerce, shopping cart, demo, React, Tailwind" />
+    <meta name="author"      content="Brayan Martinez" />
+
+    <meta name="robots"       content="index, follow" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preload" as="image" href="/src/assets/hero.png" imagesrcset="/assets/hero.avif 1x, /assets/hero@2x.avif 2x" type="image/avif" />
+    
     <title>E-Commerse app demo</title>
   </head>
   <body>
